# openclaw

./: .bashrc  .gitconfig  .gitguardian.yaml  .gitignore  .profile  AGENTS.md  package.json  pnpm-lock.yaml
.clawdbot/: clawdbot.json
.cursor/commands/: comorbidity.md  ultrathink-apex-research.md  ultrathink.md
.cursor/plans/: complete_apex_system_audit_2b1c4aa0.plan.md  (+1 more)
clawd/: AGENTS.md  APEX-AUDIT-PuenteWorks-Launch.md  APEX_INTEGRATION.md  APEX_INTERNALIZATION_COMPLETE.md  BOOTSTRAP.md  CIS-DISAMBIGUATION.md  CURSOR-RESOLUTIONS.md  EMAIL-DELEGATION-SETUP.md  EVOLUTION-QUEUE-ARCHIVE.md  EVOLUTION-QUEUE.md  FRUSTRATION-LOG.md  HEARTBEAT.md  IDENTITY.md  JOB.md  MEMORY.md  METRICS.md  PENDING-TASKS.md  PROJECTS.md  SELF-NOTES.md  SOUL.md  SOUL.md.backup-20260127-162953  STATUS.md  TOOLS.md  apex-local.md  security-log.md  week-1-summary.md
clawd-local/: AGENTS.md  APEX.md  IDENTITY.md  RULES.md  SOUL.md  TOOLS.md  USER.md  WORKSPACE.md  liminal_status.txt
clawd-public/: AGENTS.md  SOUL.md  TOOLS.md
clawd/ceramics/: cli.py  (+6 more)
git-hooks/: pre-commit  pre-push
liminal/: EXPLORATION-LOG-2026-02-02.md  PRINCIPLES.md  seed_numbers.txt
liminal/server/: Cargo.toml  README.md  start.sh
liminal/server/src/: main.rs
liminal/server/src/shaders/: glitch_waves.glsl  liminal_noise.glsl  threshold_ripple.glsl  void_particles.glsl
liminal/server/static/: index.html  liminal.js
scripts/: browser-relay-proxy.mjs  bw-get  committer  gateway-watchdog.sh  liam-startup.sh  liam-watchdog.sh  safe-push  token_benchmark.py  token_benchmark.ts
test/: private-mode.e2e.test.ts
(+500 files in other folders)
